fix/scrollbar-css

--- a/app/globals.css
+++ b/app/globals.css
@@ -71,6 +71,21 @@ body {
   }
 }
 
+::-webkit-scrollbar {
+  width: 7px;
+  height: 7px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #e4e4e4;
+  border-radius: 100px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #353535;
+  border-radius: 100px;
+}
+
 @layer utilities {
   .gradient {
     @apply bg-gradient-to-b from-gray-400 via-gray-200 to-gray-600;
